# ICAIF_2025_Cryptocurrency_Forecasting_Starter_Kit

./: README.md  pyproject.toml  quickstart.ipynb  requirements.txt  run.py  run_module.py
data/: train.pkl  x_test.pkl  y_test_local.pkl  y_test_local_time.pkl
preprocess/: preprocess.py  try_pipeline.py  try_streaming_and_pipeline.py
research/: mean_reversion.ipynb  patch_transformers.ipynb  ridge_regr.ipynb  signature_inversion_model.ipynb  test_sig_computation.ipynb
research/ridge/: data_playground.ipynb  features_compute.py  playground.ipynb  research_features.ipynb
sample_submission/: model.py  model_weights.pkl  submission_example.pkl
sample_submission_tcm/: inference.py  model.py  model_arima.py
src/: data_preparation.py  dataset.py  features_compute.py  features_generation.py  inference.py  lstm.py  metrics.py  run.py  sig_tcm.py  tcm_extra_features.py  trading.py  training.py  validate.py
src/icaif/: dataset.py  metrics.py  metrics_np.py  quickstart.ipynb  trading.py
submission/: inference.py  model.py  model_weights.pkl
submissions/ridge/: inference.py  model.py
utils/: dataset.py
